--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,9 @@ build/
 # OS-specific files
 .DS_Store
 Thumbs.db
+
+# VSCode specific files
+.vscode/
+
+# JetBrains IDE files (PyCharm, IntelliJ IDEA)
+.idea/
